--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,34 +4,50 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = [
-    "diff-gaussian-rasterization",
-    "fused-ssim",
+dependencies = ["transformers>=4.52.4",
+
+]  # Instalación manual por grupos
+
+[project.optional-dependencies]
+torch = [
+    "torch",
+    "torchaudio",
+    "torchvision"
+]
+base = [
     "joblib>=1.4.2",
     "numpy==1.26.4",
     "opencv-python>=4.11.0.86",
     "plyfile>=1.1",
     "setuptools>=79.0.0",
-    "simple-knn",
-    "torch>=2.0.1",
-    "torchaudio>=2.0.2",
-    "torchvision>=0.15.2",
-    "tqdm>=4.67.1",
+    "tqdm>=4.67.1"
+]
+submodules = [
+    "diff-gaussian-rasterization",
+    "fused-ssim",
+    "simple-knn"
 ]
 
+[build-system]
+requires = ["setuptools>=61"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = []
+
+
 [tool.uv.sources]
-torch = [{ index = "pytorch-cu117" }]
-torchvision = [{ index = "pytorch-cu117" }]
-torchaudio = [{ index = "pytorch-cu117" }]
+torch = [{ index = "pytorch-cu128" }]
+torchvision = [{ index = "pytorch-cu128" }]
+torchaudio = [{ index = "pytorch-cu128" }]
 diff-gaussian-rasterization = { path = "submodules/diff-gaussian-rasterization" }
 simple-knn = { path = "submodules/simple-knn" }
 fused-ssim = { path = "submodules/fused-ssim" }
 
 
-
 [[tool.uv.index]]
-name = "pytorch-cu117"
-url = "https://download.pytorch.org/whl/cu117"
+name = "pytorch-cu128"
+url = "https://download.pytorch.org/whl/cu128"
 explicit = true
 
 
