--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = ["transformers>=4.52.4",
-
+dependencies = [
+    "faiss-gpu>=1.7.2",
+    "transformers>=4.52.4",
 ]  # Instalación manual por grupos
 
 [project.optional-dependencies]
