--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "faiss-gpu>=1.7.2",
     "transformers>=4.52.4",
 ]  # Instalación manual por grupos
 
@@ -22,7 +21,8 @@ base = [
     "plyfile>=1.1",
     "setuptools>=79.0.0",
     "tqdm>=4.67.1",
-    "tensorboard"
+    "tensorboard",
+    "pytorch3d"
 ]
 submodules = [
     "diff-gaussian-rasterization",
